代码优化及maven插件

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,17 @@
     </properties>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -70,6 +81,19 @@
                     <path>/code</path>
                     <uriEncoding>UTF-8</uriEncoding>
                     <port>8081</port>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <argLine>-Xms512m -Xmx1024m</argLine>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                    <excludes>
+                        <exclude>cn/vansky/code/generator/MyBatisGeneratorTest.java</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
